<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- main activity -->
    <string name="app_name">天天背单词</string>
    <string name="activity_main_stady">背单词</string>
    <string name="activity_main_review">复习</string>
    <string name="activity_main_test">测试</string>
    <string name="activity_main_translate">翻译</string>
    <string name="activity_main_setting">设置</string>
    <string name="activity_main_lookback">查看成绩</string>
    <string name="activity_main_learn">熟悉单词数：</string>
    <string name="activity_main_reviews">今日任务数：</string>
    <string name="activity_main_tomrow">明日任务数：</string>
    <!-- main activity -->
    <!-- loading activity -->
    <string name="activity_loading_info">加载中。。。</string>
    <string name="activity_loading_submit">登录</string>
    <string name="activity_loading_regeist">一键注册</string>
    <string name="activity_loading_waring">用户名或密码不匹配。</string>
    <!-- loading activity -->
    <!-- image  contentDescription -->
    <string name="image_user_photo">头像</string>
    <string name="image_mao">猫猫</string>
    <string name="image_loading">注意</string>
    <!-- image  contentDescription -->

    <string name="title_activity_setting">SettingActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

</resources>