<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/common_margin_LR"
    android:paddingLeft="@dimen/common_margin_LR"
    android:paddingRight="@dimen/common_margin_LR"
    android:paddingTop="@dimen/common_margin_LR"
    tools:context="com.zhu.ttwords.activity.MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/image_main_user_photo"
            android:contentDescription="@string/image_user_photo"
            android:src="@drawable/image_main_user_photo1" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:padding="10dp"
            android:rowCount="2" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_main_learn" />

            <TextView
                android:id="@+id/activity_main_learn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="100" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_main_reviews" />

            <TextView
                android:id="@+id/activity_main_review"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="20" />
        </GridLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/activity_main_study"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_common_button"
            android:onClick="study"
            android:text="@string/activity_main_stady" />


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_common_button"
            android:text="@string/activity_main_lookback" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_common_button"
            android:text="@string/activity_main_translate" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_common_button"
            android:onClick="setting"
            android:text="@string/activity_main_setting" />
    </LinearLayout>

</LinearLayout>